test/expected/explain_fo_plus_2crk_b++default.out
explain friend bool operator+(S const&, S const&) = default
                  ^
19: error: only operator "=" and relational operators can be default
